# time_as_computation_cost

./: README.md  SCIENTIFIC_STATUS.md  add_bridge_to_widgets.py  corrected_widget_cell.py  example_fitment_notebook_cell.py  find_geodesics_problem.py  generate_corrected_summary.py  pyproject.toml  quick_tacc_assessment.py  test_constitutive_fix.py  test_enhanced_plugin_system.py  test_final_verification.py  test_fitment_bridge.py  test_fix_simple.py  test_geodesics_direct.py  test_geodesics_fix.py  test_geodesics_simple.py  test_geodesics_standalone.py  test_simple_runner.py
capacity-physics/: .gitkeep  LICENSE  README.md  experiments.ipynb  pyproject.toml
capacity-physics/configs/: exp_bandgaps_v1.yaml
capacity-physics/data/derived/: .gitkeep
capacity-physics/data/thermo_runs/: .gitkeep
capacity-physics/reports/: .gitkeep
capacity-physics/src/capacity/: __init__.py  constants.py  constitutive.py  geodesics.py  ppn.py
capacity-physics/src/capacity/micro/: bandgaps.py  checks.py
configs/: default.yaml  development.yaml
configs/profiles/: development.yaml  production.yaml
data/: min.json
docs/: HOWTO_fitment.md  experiment_rationales.md  model_in_brief.md
experiments/: run_bandgaps.py  run_black_holes.py  run_causal_diamond.py  run_cosmology.py  run_geodesics.py  run_gravitational_waves.py  run_mode_crowding.py  run_ppn.py  run_tension_bandgaps.py
experiments/results/: tension_bandgaps_seed123.json  tension_bandgaps_seed42.json
notebooks/: 00_Run_All_Experiments.ipynb  01_Causal_Diamond_Colab.ipynb  01_Time_Dilation_Ticks.ipynb  02_Tension_Bandgaps_Colab.ipynb  03_Mode_Crowding_Colab.ipynb  bandgaps_colab.ipynb  cosmology_colab.ipynb  geodesics_colab.ipynb  ppn_colab.ipynb
src/tacc/: __init__.py  baselines.py  black_holes.py  constants.py  constitutive.py  cosmology.py  geodesics.py  gravitational_waves.py  metric.py  ppn.py
tests/: __init__.py  test_causal_diamond.py  test_fitment_api.py  test_mode_crowding.py  test_tension_bandgaps.py  test_tension_bandgaps_fixed.py
(+27 files in other folders)
