[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-physics"
version = "0.1.0"
description = "Computational-capacity model of time dilation: micro fit, macro validation, reproducible pipeline."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "seaborn",
    "rich",
    "pytest",
    "sympy"
]

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.github
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".github",
    ".venv",
    "build",
    "dist"
]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "B", "A", "C4", "T4", "S", "Q", "RUF"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
